--- a/.gitignore
+++ b/.gitignore
@@ -64,12 +64,12 @@ captures/
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+# google-services.SerializedName
 
 # Freeline
 freeline.py
 freeline/
-freeline_project_description.json
+freeline_project_description.SerializedName
 
 # fastlane
 fastlane/report.xml
